# mapi-rs

crates/mapi/: Cargo.toml
crates/mapi-sys/: Cargo.toml
crates/mapi-sys/src/: Microsoft.rs
crates/update-bindings/: Cargo.toml
